# taskBank

./: CMakeLists.txt  Constants.h  main.cpp  main.qml  resources.qrc  toolchain.cmake
common/: database.cpp  database.h
component/: controlworkeditorcomponent.cpp  controlworkeditorcomponent.h  controlworkscomponent.cpp  controlworkscomponent.h
component/utils/: AttachmentSaver.cpp  AttachmentSaver.h  CheckBoxListModel.h  TaskGroupsModel.h  groupDetailsModel.h  tasktabsmodel.h  tasktagsmodel.h  variantsModel.h
databases/: controlworkcontentdatabase.cpp  controlworkcontentdatabase.h  controlworkdatabase.cpp  controlworkdatabase.h
models/: Tag.h  Variant.h  controlwork.h  task.h  taskgroup.h
qml/: AddProjectWindow.qml  AddTagWindow.qml  CheckboxList.qml  ConfirmationWindow.qml  Container.qml  ExportArchiveWindow.qml  GenerateVariantsWindow.qml  ImportArchiveWindow.qml  ProjectEditorWindow.qml  ProjectsWindow.qml  TabsRow.qml  TagsRow.qml  TagsWindow.qml  TaskEditor.qml  VariantContent.qml
repositories/: ControlWorksRepository.cpp  ControlWorksRepository.h  controlworkeditorrepository.cpp  controlworkeditorrepository.h
utils/: controlworkarchivemanager.cpp  controlworkarchivemanager.h  controlworkmetadataeditor.cpp  controlworkmetadataeditor.h  controlworkpdfexporter.cpp  controlworkpdfexporter.h
